Fix archived page high contrast colours (#3510)
* Update standalone-indicators.html

* Update standalone-indicators.html

* Update standalone-indicators.html

* Update custom.scss

* Update custom.scss

* Update custom.scss

* Update custom.scss

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -89,5 +89,8 @@ body.contrast-high {
   .fa-exclamation-circle {
     color: white;
   }
+  .goal-indicators div span.status.complete {
+    color: black !important;
+   }
 }
 
